# violin

./: .gitignore  .hermes.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SOUL.md  config.yaml  distribution.yaml  pyproject.toml  skills.snapshot.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  guard-check.yml  lint.yml
benchmark/: score.py
plugins/: __init__.py
plugins/violin_guard/: __init__.py  adapters.py  bootstrap.py  code_execution_audit.py  command.py  execution.py  executor.py  findings.py  history.py  hypotheses.py  phases.py  plugin.yaml  ptt.py  release.py  results.py  runtime_backend.py  schemas.py  service.py  skill_policy.py  skill_receipts.py  state.py  targets.py  terminal_policy.py  tools.py  utils.py
scripts/: hypothesis_guard.py  kali.sh  smoke-test.ps1  smoke-test.sh  violin_guard.py
scripts/guard/: __init__.py  bootstrap.py  closeout.py  command.py  core.py  freshness.py  (+6 more)
tests/: conftest.py  test_burst_target.py  test_executor_and_adapters.py  test_pentest_docs_no_new_session.py  test_pentest_docs_task1_receipt.py  test_pentest_docs_task2_disposition_gate.py  test_pentest_docs_task3_ptai_sidecar.py  test_pentest_docs_task4_checkpoint.py  test_pentest_docs_task5_output_budget.py  test_pentest_docs_task6_atomic_findings.py  test_pentest_docs_task7_attack_chain.py  test_pentest_docs_task8_detection_engineering.py  test_pentest_docs_task9_cvss4_crosswalk.py  test_plugin_guard.py  test_release_links.py  test_roadmap_1_1_1.py
(+116 files in other folders)
